--- a/src/components/EmployeeModal/style.css
+++ b/src/components/EmployeeModal/style.css
@@ -7,18 +7,112 @@
 	background: rgba(0, 0, 0, 0.432);
 }
 .modal-main {
+	display: grid;
+	grid-template-areas:
+		"header     header"
+		"portrait   info"
+		"close-button close-button";
+	grid-template-rows: auto 70% auto;
+	grid-template-columns: auto 45%;
 	position: fixed;
 	background: white;
-	width: 80%;
-	height: auto;
+	width: 70%;
+	max-width: 950px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	text-align: center;
 }
+
+.modal-main .modal-header {
+	grid-area: header;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: white;
+	z-index: 10;
+}
+.modal-header h1,
+.modal-header p {
+	margin-bottom: 15px;
+}
+.modal-header p {
+	margin: auto 20px 40px 20px;
+}
+
+.modal-main .modal-portrait {
+	grid-area: portrait;
+	align-self: center;
+	margin: 5px;
+}
+.modal-portrait img {
+	width: 90%;
+	object-fit: fill;
+	filter: contrast(110%) sepia(60%) brightness(90%);
+	border-radius: 10px;
+	padding: 5px;
+}
+.modal-portrait a {
+	position: fixed;
+	background-color: white;
+	text-decoration: none;
+	font-weight: 700;
+	left: 0;
+	bottom: 20%;
+	border-radius: 0 30px 30px 0;
+	padding: 10px 15px 10px 20px;
+}
+
+.modal-main .modal-info {
+	grid-area: info;
+	align-self: center;
+	text-align: left;
+	justify-self: left;
+	margin: 5px;
+}
+.modal-info p:first-child {
+	font-size: 22px;
+	font-weight: 500;
+}
+.modal-info p:last-child {
+	word-break: break-all;
+}
+
+.modal-main button {
+	grid-area: close-button;
+	margin-top: 30px;
+	border: none;
+}
+
 .display-block {
 	display: block;
 }
-
 .display-none {
 	display: none;
+}
+
+@media screen and (max-width: 620px) {
+	.modal-main {
+		grid-template-areas:
+			"header"
+			"portrait"
+			"info"
+			"close-button";
+		grid-template-rows: auto auto auto;
+		grid-template-columns: auto;
+	}
+    .modal-header h1,
+    .modal-header p {
+        font-size: 30px;
+        margin: 20px 10px;
+	}
+	.modal-portrait a {
+		position: relative;
+		border-radius: 10px;
+	}
+	.modal-main .modal-info {
+		align-self: center;
+		text-align: center;
+		justify-self: center;
+	}
 }
